test/official_tests/unexpected_character.lox
// error: {"line":3,"message":"Unexpected character '|'","type":"LexingError"}
// error: {"line":3,"message":"Expect ')' after function arguments","type":"ParseError"}
foo(a | b);
